Fixed some small css issues: - Dropdown menus being drawn behing some input elements (z-index issue) - Radio buttons stack better when the view is small.

--- a/OSBLEPlus/trunk/development/OSBLE.Web/Content/navbar.css
+++ b/OSBLEPlus/trunk/development/OSBLE.Web/Content/navbar.css
@@ -46,6 +46,9 @@
 .navbar-default .navbar-link:hover {
   color: #ffffff;
 }
+.navbar .nav > li {
+    z-index: 10000;
+}
 
 #course_label {
     display: none;
